hphp/hack/test/typecheck/disallow_elvis_space/elvis_space.php.exp
File "elvis_space.php", line 4, characters 15-15:
Remove all whitespace between ? and : (Parsing[1002])
