hphp/hack/test/typecheck/disallow_elvis_space/elvis_space.php
<?hh

function test($a, $b) {
  return $a ? : $b;
}
